--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redis-redisearch": "^1.0.1",
     "redis-rejson": "^1.0.0",
     "socket.io": "^4.0.1",
+    "socket.io-redis": "^6.1.0",
     "uuid": "^8.3.2",
     "youtube-v3-api": "^1.1.1"
   },
