--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "js-video-url-parser": "^0.4.3",
     "morgan": "~1.9.1",
+    "nanoid": "^3.1.23",
     "parse-iso-duration": "^1.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
